manifests/cozy-friends-site/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cozy-friends-site
  labels:
    app.kubernetes.io/name: cozy-friends-site
    app.kubernetes.io/part-of: cozy-friends
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
